--- a/advertisers.html
+++ b/advertisers.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark fs-4 px-4 bg-dark">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img class="logo" src="images/logo.png" alt=""/>
@@ -41,7 +41,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mb-2 mb-md-0 ms-auto">
           <li class="nav-item fs-4 px-4">
-            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link" aria-current="page" href="index.html">HOME</a>
           </li>
           <li class="nav-item fs-4 px-4">
             <a class="nav-link" href="top-offers.html">TOP OFFERS</a>
