--- a/contact-info.html
+++ b/contact-info.html
@@ -48,7 +48,7 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark fs-4 px-4 bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img class="logo" src="images/logo.png" alt=""/>
@@ -59,7 +59,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mb-2 mb-md-0 ms-auto">
                     <li class="nav-item fs-4 px-4">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">HOME</a>
                     </li>
                     <li class="nav-item fs-4 px-4">
                         <a class="nav-link" href="top-offers.html">TOP OFFERS</a>
@@ -83,7 +83,7 @@
         <div class="container-fluid p-0">
             <div class="row">
                 <div class="col-12" style="position: relative">
-                    <img src="images/contact-info-banner.png" class="img-fluid" alt="" style="margin-top: -15px">
+                    <img src="images/contact-info-banner.png" class="img-fluid" alt="" style="margin-top: 0">
                     <div class="text-center" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
                         <p class="fs-1 text-white">Become A KiviMobi Partner Today</p>
                     </div>
