--- a/publisher.html
+++ b/publisher.html
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mb-2 mb-md-0 ms-auto">
                     <li class="nav-item fs-4 px-4">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">HOME</a>
                     </li>
                     <li class="nav-item fs-4 px-4">
                         <a class="nav-link" href="top-offers.html">TOP OFFERS</a>
