--- a/contact-info.html
+++ b/contact-info.html
@@ -85,6 +85,7 @@
                 <div class="col-12" style="position: relative">
                     <img src="images/contact-info-banner.png" class="img-fluid" alt="" style="margin-top: 0">
                     <div class="text-center" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+                        <p class="fs-1 text-danger">Hi impact</p>
                         <p class="fs-1 text-white">Become A KiviMobi Partner Today</p>
                     </div>
                 </div>
