--- a/top-offers.html
+++ b/top-offers.html
@@ -74,7 +74,7 @@
             <div class="row align-items-center mx-auto w-80 px-5 py-5">
                 <div class="col-12 col-md-7">
                     <div class="colored-line d-flex align-items-center">
-                        <span><p class="fs-3">Explore, Convert, Profit</p></span>
+                        <p class="fs-3"><span>Explore, Convert, Profit</span></p>
                     </div>
                     <p class="fs-2">Become Our Next Super Affiliate!</p>
                     <p class="fs-5">Join us in our Skype channel and unlock a world of top converting offers with dedicated affiliate managers. Let's skyrocket your success together!
