--- a/contact-info.html
+++ b/contact-info.html
@@ -97,26 +97,31 @@
             <div class="col-12 col-md-4 m-4">
                 <div class="h-100 p-5 bg-light border rounded-3 text-center">
                     <h2>Publishers  Contact</h2>
-                    <h3>Shell</h3>
+                    <h3>Vicky</h3>
                     <div class="col py-2">
                         <div class="image-text-container justify-content-center">
-                            <img src="images/live.png" alt="" class="img">
-                            <span class="fs-5 text">Live: shellysan</span>
+                            <img src="images/telegram.png" alt="" class="img">
+                            <span class="fs-5 text">@Cici0cheng</span>
                         </div>
                     </div>
                     <div class="col py-2">
                         <div class="image-text-container justify-content-center">
                             <img src="images/wechat.png" alt="" class="img">
-                            <span class="fs-5 text">WeChat: Tony68989</span>
+                            <span class="fs-5 text">Tony68989</span>
                         </div>
                     </div>
-
+                    <div class="col py-2">
+                        <div class="image-text-container justify-content-center">
+                            <img src="images/email.png" alt="" class="img">
+                            <span class="fs-5 text">vicky@mealyne.com</span>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-12 col-md-4 m-4">
                 <div class="h-100 p-5 bg-light border rounded-3 text-center">
                     <h2>Advertisers  Contact</h2>
-                    <h3>Julia Zhu</h3>
+                    <h3>Julia</h3>
                     <div class="col py-2">
                         <div class="image-text-container justify-content-center">
                             <img src="images/live.png" alt="" class="img">
@@ -125,8 +130,14 @@
                     </div>
                     <div class="col py-2">
                         <div class="image-text-container justify-content-center">
-                            <img src="images/wechat.png" alt="" class="img">
-                            <span class="fs-5 text">WeChat: Julia3zhu</span>
+                            <img src="images/telegram.png" alt="" class="img">
+                            <span class="fs-5 text">@Julia3zhu</span>
+                        </div>
+                    </div>
+                    <div class="col py-2">
+                        <div class="image-text-container justify-content-center">
+                            <img src="images/email.png" alt="" class="img">
+                            <span class="fs-5 text">julia@mealyne.com</span>
                         </div>
                     </div>
                 </div>
@@ -136,7 +147,14 @@
     <section id="contact-form">
         <div class="container">
             <div class="row">
-                <iframe style="width: 100%; height: 530px" src="https://jsform3.com/web/formview/66cec385fc918f1ad7462c99?_ed=1" allowfullscreen></iframe>
+<!--                <iframe style="width: 100%; height: 530px" src="https://jsform3.com/web/formview/66cec385fc918f1ad7462c99?_ed=1" allowfullscreen></iframe>-->
+            </div>
+        </div>
+    </section>
+    <section id="contact-button">
+        <div class="container">
+            <div class="row mt-5 mb-5">
+                <img src="images/contact-button.png">
             </div>
         </div>
     </section>
